--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
     padding: 0;
     margin: 0;
 }
-html, body
+body
 {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     background-color: #ebddd2;
     font-family: 'Roboto', sans-serif;
 }
@@ -39,7 +39,7 @@ a
     align-items: center;
     background-color: white;
     border-radius: 0 0 15px 15px; 
-    position: fixed; 
+    position: sticky;
     z-index: 10;    
 }
 .titremenu 
