--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 
+
+body, html
+{
+    width: 100%;
+    height: 100%;
+    background-color: #ebddd2;
+    font-family: 'Roboto', sans-serif;
+}
 *
 {
     padding: 0;
     margin: 0;
-}
-body
-{
-    width: auto;
-    height: auto;
-    background-color: #ebddd2;
-    font-family: 'Roboto', sans-serif;
 }
 a
 { 
@@ -81,7 +82,7 @@ a
     max-width: 1000px;
     min-width: 640px;
     left : 50%;
-    transform: translate(-43%, 0); 
+    transform: translate(-51%, 0); 
 }
 
 
@@ -209,4 +210,5 @@ div.image > div:hover
 #main > div > div > p.sources > a.sources
 {
     font-size: 13px;
+    text-decoration: none;
 }
