--- a/expo.css
+++ b/expo.css
@@ -45,7 +45,7 @@ a
     align-items: center;
     background-color: white;
     border-radius: 0 0 15px 15px; 
-    position: sticky;
+    position: fixed;
     z-index: 10;    
 }
 .titremenu 
