--- a/info.css
+++ b/info.css
@@ -40,7 +40,7 @@ a
     align-items: center;
     background-color: white;
     border-radius: 0 0 15px 15px; 
-    position: sticky;
+    position: fixed;
     z-index: 10;    
 }
 .titremenu 
@@ -81,11 +81,9 @@ a
     display: flex;
     width: 100%;
     flex-wrap: nowrap;
-    height: 2000px;
 }
 #main > div
 {
-    display: flex;
     padding: 20px;
     margin-right: 5%;
     margin-left: 5%;
@@ -101,6 +99,7 @@ a
     height: auto;
     text-align: justify;
     margin-bottom: 70px;
+    padding-bottom: 40px;
 }
 
 
@@ -199,4 +198,60 @@ h3 > a:hover
     margin-bottom: 50px;
     text-align: center;
 }
+.titretexte
+{
+    height: min-content;
+    margin-left: 5%;
+    margin-right: 2%;
+    margin-bottom: 40px;
+    padding-top: 100px;
+    font-size: 25px;
+    text-transform: uppercase;
+}
+.titretexte::before
+{
+    content: "- ";
+}
+#carte
+{
+    width: 100%;
+    min-height: 300px;
+}
+.texteinfo
+{
+    font-size: 20px;
+    color: #d1b29b;
+    margin-right: 2%;
+    margin-left: 2%;
+    text-align: justify;
+}
+.titreinter
+{
+    margin-left: 8%;
+    margin-right: 2%;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #d1b29b;
+}
+#parking
+{
+    font-size: 20px;
+    color: #d1b29b;
+    margin-bottom: 70px;
+    text-align: justify;
+}
+#tarif
+{
+    width: 100%;
+
+}
+#tarif > img
+{
+    display: block;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+}
+
 
