--- a/salles.css
+++ b/salles.css
@@ -6,6 +6,7 @@
 {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    overflow-x: hidden; 
 }
 body, html
 {
