--- a/expo.css
+++ b/expo.css
@@ -94,7 +94,7 @@ a
     transform: translate(-50%, 0);
     box-sizing: border-box;
     box-shadow: 0 15px 50px rgba(0, 0, 0, .2);
-
+    margin-bottom: 70px;
 }
 
 .expos
