--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a
     align-items: center;
     background-color: white;
     border-radius: 0 0 15px 15px; 
-    position: sticky;
+    position: fixed;
     z-index: 10;    
 }
 .titremenu 
